// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsePanesSegment(): Input:    1`] = `Array []`;

exports[`parsePanesSegment(): Input: fOo,{"invalid} 1`] = `
Array [
  Object {
    "id": "fOo",
    "params": undefined,
  },
]
`;

exports[`parsePanesSegment(): Input: fOo,{"invalid}; 1`] = `
Array [
  Object {
    "id": "fOo",
    "params": undefined,
  },
]
`;

exports[`parsePanesSegment(): Input: foo,;bar 1`] = `
Array [
  Object {
    "id": "foo",
    "params": undefined,
  },
  Object {
    "id": "bar",
    "params": undefined,
  },
]
`;

exports[`parsePanesSegment(): Input: foo;bar,["foo"];baz 1`] = `
Array [
  Object {
    "id": "foo",
    "params": undefined,
  },
  Object {
    "id": "baz",
    "params": undefined,
  },
]
`;

exports[`parsePanesSegment(): Input: foo;bar,{"inv}; 1`] = `
Array [
  Object {
    "id": "foo",
    "params": undefined,
  },
  Object {
    "id": "bar",
    "params": undefined,
  },
]
`;

exports[`parsePanesSegment(): Input: foo;bar,{"nested":{"title":"foo;heisann","number":123}};baz;banana;hei 1`] = `
Array [
  Object {
    "id": "foo",
    "params": undefined,
  },
  Object {
    "id": "bar",
    "params": Object {
      "nested": Object {
        "number": 123,
        "title": "foo;heisann",
      },
    },
  },
  Object {
    "id": "baz",
    "params": undefined,
  },
  Object {
    "id": "banana",
    "params": undefined,
  },
  Object {
    "id": "hei",
    "params": undefined,
  },
]
`;

exports[`parsePanesSegment(): Input: foo;bar,{"title":"foo;heisann"};baz;banana;hei 1`] = `
Array [
  Object {
    "id": "foo",
    "params": undefined,
  },
  Object {
    "id": "bar",
    "params": Object {
      "title": "foo;heisann",
    },
  },
  Object {
    "id": "baz",
    "params": undefined,
  },
  Object {
    "id": "banana",
    "params": undefined,
  },
  Object {
    "id": "hei",
    "params": undefined,
  },
]
`;
